# FreeRTOS-rust

./: LICENSE
.github/workflows/: ci.yml
freertos-cargo-build/: Cargo.toml  README.md
freertos-rust/: Cargo.toml  README.md
freertos-rust-examples/: Cargo.toml
freertos-rust/src/: lib.rs  shim.rs  task.rs
freertos-rust/src/freertos/: shim.c
freertos-rust/src/prelude/: no_std.rs
