[package]
name = "freertos-rust-pd"
version = "0.2.3"
authors = ["Tobias Kaupat <tk@lobaro.de>", "Shiv Rajora <rajora.shiv@gmail.com>"]
edition = "2018"
description = """
Create to use FreeRTOS in rust projects.
The freertos-cargo-build crate can be used to build and link FreeRTOS from source inside build.rs.
"""
keywords = ["FreeRTOS", "embedded", "demo", "library"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/shivrajora/FreeRTOS-rust"
links = "freertos"

[lib]
name = "freertos_rust"
path = "src/lib.rs"

[dependencies]
# For targets without hardware atomics (e.g. Cortex-M0/thumbv6m), provide Arc/Weak via software emulation
[target.'cfg(not(target_has_atomic = "ptr"))'.dependencies]
portable-atomic = { version = "1", features = ["critical-section"] }
portable-atomic-util = { version = "0.2", features = ["alloc"] }

[features]
default = ["allocator", "sync", "time", "hooks", "interrupt", "delete_task"]
allocator = []
sync = ["interrupt"]
time = ["interrupt"]
hooks = []
interrupt = []
cpu_clock = []
delete_task = []
